Added Makefile to minify JS. HTML and manifest references minified JS.

--- a/background.html
+++ b/background.html
@@ -1,7 +1,6 @@
 <html>
 <head>
-<script type="text/javascript" src="chrome_ex_oauthsimple.js"></script>
-<script type="text/javascript" src="chrome_ex_oauth.js"></script>
-<script type="text/javascript" src="background.js"></script>
+<script type="text/javascript" src="chrome_ex_oauth.min.js"></script>
+<script type="text/javascript" src="background.min.js"></script>
 </head>
 </html>
