--- a/background.html
+++ b/background.html
@@ -2,6 +2,7 @@
 <head>
 <script type="text/javascript" src="chrome_ex_oauthsimple.js"></script>
 <script type="text/javascript" src="chrome_ex_oauth.js"></script>
+<script type="text/javascript" src="twitter-text.js"></script>
 <script type="text/javascript" src="background.js"></script>
 </head>
 </html>
