Ditch build system.

--- a/chrome_ex_oauth.html
+++ b/chrome_ex_oauth.html
@@ -16,6 +16,7 @@
   </head>
   <body onload="onLoad();">
     Redirecting...
-    <script type="text/javascript" src="chrome_ex_oauth.min.js"></script>
+    <script type="text/javascript" src="chrome_ex_oauthsimple.js"></script>
+    <script type="text/javascript" src="chrome_ex_oauth.js"></script>
   </body>
 </html>
