--- a/background.html
+++ b/background.html
@@ -1,6 +1,7 @@
 <html>
 <head>
-<script type="text/javascript" src="chrome_ex_oauth.min.js"></script>
-<script type="text/javascript" src="background.min.js"></script>
+<script type="text/javascript" src="chrome_ex_oauthsimple.js"></script>
+<script type="text/javascript" src="chrome_ex_oauth.js"></script>
+<script type="text/javascript" src="background.js"></script>
 </head>
 </html>
