--- a/chrome_ex_oauth.html
+++ b/chrome_ex_oauth.html
@@ -13,10 +13,11 @@
         color: #333;
       }
     </style>
-  </head>
-  <body onload="onLoad();">
-    Redirecting...
     <script type="text/javascript" src="chrome_ex_oauthsimple.js"></script>
     <script type="text/javascript" src="chrome_ex_oauth.js"></script>
+    <script type="text/javascript" src="onload.js"></script>
+  </head>
+  <body>
+    Redirecting...
   </body>
 </html>
