--- a/background.html
+++ b/background.html
@@ -3,6 +3,7 @@
 <script type="text/javascript" src="chrome_ex_oauthsimple.js"></script>
 <script type="text/javascript" src="chrome_ex_oauth.js"></script>
 <script type="text/javascript" src="twitter-text.js"></script>
+<script type="text/javascript" src="settings.js"></script>
 <script type="text/javascript" src="background.js"></script>
 </head>
 </html>
